# energy-risk-dashboard-smes

./: .gitignore  Makefile  README.md  pyproject.toml
energy_risk/: dbt_project.yml
energy_risk/models/marts/: mart_sme_energy_costs.sql  mart_sme_energy_costs.yml
energy_risk/models/staging/: schema.yml  sources.yml  stg_opsd_prices.sql
energy_risk/seeds/: seeds_properties.yml  sme_energy_profile.csv
infra/: main.tf  terraform.tfvars.example  variables.tf
ingestion/: create_external_table.sh  download_opsd.py  upload_to_gcs.py
